[gd_scene load_steps=53 format=2]

[ext_resource path="res://boat.obj" type="ArrayMesh" id=1]
[ext_resource path="res://world.gd" type="Script" id=2]
[ext_resource path="res://Camroot.gd" type="Script" id=3]
[ext_resource path="res://boat.gd" type="Script" id=4]
[ext_resource path="res://Clounds.gd" type="Script" id=5]
[ext_resource path="res://assets/island/Island.obj" type="ArrayMesh" id=6]
[ext_resource path="res://assets/island/Untitled.png" type="Texture" id=7]
[ext_resource path="res://assets/coqueiro_lendario/coqueiro_texture.png" type="Texture" id=8]
[ext_resource path="res://assets/coqueiro_lendario/Coqueiro_Lendario.obj" type="ArrayMesh" id=9]
[ext_resource path="res://new_gradient.tres" type="Gradient" id=10]
[ext_resource path="res://island_col.tres" type="Shape" id=11]
[ext_resource path="res://assets/background_popup_colorido.png" type="Texture" id=12]
[ext_resource path="res://assets/ilha_biologia.png" type="Texture" id=13]
[ext_resource path="res://UI.gd" type="Script" id=14]
[ext_resource path="res://assets/fonts/OpenSans-Italic-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=15]

[sub_resource type="CapsuleShape" id=6]
height = 0.243429

[sub_resource type="Shader" id=22]
code = "shader_type spatial;
render_mode unshaded;

uniform sampler2D gradient: hint_albedo;
uniform float fog_intensity:  hint_range(0.0, 1.0);
uniform float fog_amount: hint_range(0.0, 1.0);

void vertex() {
	POSITION = vec4(VERTEX,	1.0);
}

void fragment() {
	vec4 original = texture(SCREEN_TEXTURE, SCREEN_UV);
	
	float depth = texture(DEPTH_TEXTURE, SCREEN_UV).x;
	vec3 ndc= vec3(SCREEN_UV, depth) * 2.0 - 1.0;
	vec4 view = INV_PROJECTION_MATRIX* vec4(ndc, 1.0);
	view.xyz /= view.w;
	depth = -view.z;
	
	float fog = depth * fog_amount;
	
	vec4 fog_color = texture(gradient, vec2(fog, 0.0));
	if (depth > 1.0)
		ALBEDO =  mix(original.rgb, fog_color.rgb, fog_color.a * fog_intensity);
	else
		ALBEDO = fog_color.rgb;
}"

[sub_resource type="Gradient" id=23]
offsets = PoolRealArray( 0.0352941, 0.447059, 1 )
colors = PoolColorArray( 0.419608, 0.890196, 1, 1, 0.145098, 0.701961, 0.682353, 0.85098, 0.419608, 0.890196, 1, 1 )

[sub_resource type="GradientTexture" id=24]
gradient = SubResource( 23 )

[sub_resource type="ShaderMaterial" id=25]
render_priority = -128
shader = SubResource( 22 )
shader_param/fog_intensity = 1.0
shader_param/fog_amount = 0.057
shader_param/gradient = SubResource( 24 )

[sub_resource type="QuadMesh" id=26]
material = SubResource( 25 )
size = Vector2( 2, 2 )

[sub_resource type="Shader" id=18]
code = "shader_type spatial;
render_mode unshaded;

uniform sampler2D gradient: hint_albedo;
uniform float fog_intensity:  hint_range(0.0, 1.0);
uniform float fog_amount: hint_range(0.0, 1.0);

void vertex() {
	POSITION = vec4(VERTEX,	1.0);
}

void fragment() {
	vec4 original = texture(SCREEN_TEXTURE, SCREEN_UV);
	
	float depth = texture(DEPTH_TEXTURE, SCREEN_UV).x;
	vec3 ndc= vec3(SCREEN_UV, depth) * 2.0 - 1.0;
	vec4 view = INV_PROJECTION_MATRIX* vec4(ndc, 1.0);
	view.xyz /= view.w;
	depth = -view.z;
	
	float fog = depth * fog_amount;
	
	vec4 fog_color = texture(gradient, vec2(fog, 0.0));
	if (depth > 1.0)
		ALBEDO =  mix(original.rgb, fog_color.rgb, fog_color.a * fog_intensity);
	else
		ALBEDO = fog_color.rgb;
}"

[sub_resource type="GradientTexture" id=19]
gradient = ExtResource( 10 )

[sub_resource type="ShaderMaterial" id=20]
render_priority = -1
shader = SubResource( 18 )
shader_param/fog_intensity = 1.0
shader_param/fog_amount = 0.011
shader_param/gradient = SubResource( 19 )

[sub_resource type="QuadMesh" id=21]
material = SubResource( 20 )
size = Vector2( 2, 2 )

[sub_resource type="DynamicFont" id=28]
size = 30
use_mipmaps = true
use_filter = true
font_data = ExtResource( 15 )

[sub_resource type="StyleBoxFlat" id=31]
bg_color = Color( 0.317647, 0.611765, 0.584314, 0.341176 )
corner_radius_top_left = 80
corner_radius_top_right = 80
corner_radius_bottom_right = 80
corner_radius_bottom_left = 80
corner_detail = 20
expand_margin_left = 11.0
expand_margin_right = 11.0
expand_margin_top = 11.0
expand_margin_bottom = 11.0
anti_aliasing_size = 10.0

[sub_resource type="StyleBoxFlat" id=32]
bg_color = Color( 0.243137, 0.478431, 0.454902, 0.341176 )
corner_radius_top_left = 80
corner_radius_top_right = 80
corner_radius_bottom_right = 80
corner_radius_bottom_left = 80
corner_detail = 20
expand_margin_left = 11.0
expand_margin_right = 11.0
expand_margin_top = 11.0
expand_margin_bottom = 11.0
anti_aliasing_size = 10.0

[sub_resource type="StyleBoxLine" id=33]
color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=30]
bg_color = Color( 0, 0.917647, 0.831373, 0.341176 )
corner_radius_top_left = 80
corner_radius_top_right = 80
corner_radius_bottom_right = 80
corner_radius_bottom_left = 80
corner_detail = 20
expand_margin_left = 11.0
expand_margin_right = 11.0
expand_margin_top = 11.0
expand_margin_bottom = 11.0
anti_aliasing_size = 10.0

[sub_resource type="StyleBoxFlat" id=34]
bg_color = Color( 0.317647, 0.611765, 0.584314, 0.341176 )
corner_radius_top_left = 80
corner_radius_top_right = 80
corner_radius_bottom_right = 80
corner_radius_bottom_left = 80
corner_detail = 20
expand_margin_left = 11.0
expand_margin_right = 11.0
expand_margin_top = 11.0
expand_margin_bottom = 11.0
anti_aliasing_size = 10.0

[sub_resource type="StyleBoxFlat" id=35]
bg_color = Color( 0.243137, 0.478431, 0.454902, 0.341176 )
corner_radius_top_left = 80
corner_radius_top_right = 80
corner_radius_bottom_right = 80
corner_radius_bottom_left = 80
corner_detail = 20
expand_margin_left = 11.0
expand_margin_right = 11.0
expand_margin_top = 11.0
expand_margin_bottom = 11.0
anti_aliasing_size = 10.0

[sub_resource type="StyleBoxLine" id=36]
color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=37]
bg_color = Color( 0, 0.917647, 0.831373, 0.341176 )
corner_radius_top_left = 80
corner_radius_top_right = 80
corner_radius_bottom_right = 80
corner_radius_bottom_left = 80
corner_detail = 20
expand_margin_left = 11.0
expand_margin_right = 11.0
expand_margin_top = 11.0
expand_margin_bottom = 11.0
anti_aliasing_size = 10.0

[sub_resource type="Animation" id=38]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MargemPopup:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MargemPopup/TPop2:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=39]
resource_name = "show"
tracks/0/type = "value"
tracks/0/path = NodePath("MargemPopup:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MargemPopup/TPop2:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="ProceduralSky" id=4]
sky_top_color = Color( 0.419608, 0.890196, 1, 1 )
sky_horizon_color = Color( 0.835294, 0.968627, 1, 1 )
ground_bottom_color = Color( 0.835294, 0.968627, 1, 1 )
ground_horizon_color = Color( 0.835294, 0.968627, 1, 1 )
sun_color = Color( 1, 0.937255, 0, 1 )
sun_angle_max = 8.62

[sub_resource type="Environment" id=5]
background_mode = 2
background_sky = SubResource( 4 )
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 1.1
ambient_light_sky_contribution = 0.47
fog_sun_amount = 1.0
fog_depth_curve = 1.31951
fog_transmit_enabled = true
fog_transmit_curve = 5.69477e-05
fog_height_enabled = true
fog_height_min = -1430.7
fog_height_max = -29.2
fog_height_curve = 0.000178721

[sub_resource type="Shader" id=1]
code = "shader_type spatial;

uniform vec4 out_color : hint_color = vec4(0.0, 0.2, 1.0, 1.0);
uniform float amount : hint_range(0.2, 1.5) = 0.8;
uniform float beer_factor = 0.2;


float generateOffset(float x,float z,float val1,float val2,float time){
	float speed = 1.0;
	
	float radiansX = ((mod(x + z * x * val1, amount) / amount) + (time * speed) * mod(x * 0.8 + z, 1.5)) * 2.0 * 3.14;
	float radiansZ = ((mod(val2 * (z * x + x * z), amount) / amount) + (time * speed) * 2.0 * mod(x, 2.0)) * 2.0 * 3.14;
	
	return amount * 0.5 * (sin(radiansZ) + cos(radiansX));
}

vec3 applyDistortion(vec3 vertex, float time){
	float xd = generateOffset(vertex.x, vertex.z, 0.2, 0.1, time);
	
	float yd = generateOffset(vertex.x, vertex.z, 0.1, 0.3, time);
	float zd = generateOffset(vertex.x, vertex.z, 0.5, 0.2, time);
	return vertex + vec3(xd, yd, zd);
}

void vertex(){
	VERTEX = applyDistortion(VERTEX, TIME * 0.1);
}

void fragment() {
	
	NORMAL = normalize(cross(dFdx(VERTEX), dFdy(VERTEX)));
	METALLIC = 6.0;
	SPECULAR = 1.0;
	ROUGHNESS = 3.0;
	
	ALBEDO = out_color.xyz;
	
	float depth = texture(DEPTH_TEXTURE, SCREEN_UV).r;
	
	depth = depth * 2.0 -1.0;
	depth = PROJECTION_MATRIX[3][2] / (depth + PROJECTION_MATRIX[2][2]);
	depth = depth + VERTEX.z;
	
	depth = exp(-depth * beer_factor);
	ALPHA = clamp(1.0 - depth, 0.0, 1.0);
	
	
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/out_color = Color( 0.917647, 0.917647, 0.917647, 1 )
shader_param/amount = 0.746
shader_param/beer_factor = 0.568

[sub_resource type="PlaneMesh" id=3]
material = SubResource( 2 )
size = Vector2( 100, 100 )
subdivide_width = 50
subdivide_depth = 50

[sub_resource type="Shader" id=12]
code = "shader_type particles;

uniform float angular_spacing = 0.5;
uniform float outward_amt = 3;
uniform float min_clound_size = 0.03;
uniform float max_clound_size = 1.03;


float rand_from_seed(in uint seed) {
  int k;
  int s = int(seed);
  if (s == 0)
    s = 305420679;
  k = s / 127773;
  s = 16807 * (s - k * 127773) - 2836 * k;
  if (s < 0)
    s += 2147483647;
  seed = uint(s);
  return float(seed % uint(65536)) / 65535.0;
}

uint hash(uint x) {
  x = ((x >> uint(16)) ^ x) * uint(73244475);
  x = ((x >> uint(16)) ^ x) * uint(73244475);
  x = (x >> uint(16)) ^ x;
  return x;
}

void vertex(){
	if(RESTART){
		
		uint alt_seed_1 = hash(uint(INDEX) + uint(1) + RANDOM_SEED);
		uint alt_seed_2 = hash(uint(INDEX) + uint(27) + RANDOM_SEED);
		uint alt_seed_3 = hash(uint(INDEX) + uint(43) + RANDOM_SEED);
		
		
		//position clounds
		float pt_index = float(INDEX) + rand_from_seed(alt_seed_1);
		pt_index = sqrt(pt_index);
		
		float x = outward_amt*pt_index*cos(angular_spacing * pt_index + 3.142 * float(sign(INDEX%2-1)));
		float y = rand_from_seed(alt_seed_2);
		float z = outward_amt*pt_index*sin(angular_spacing * pt_index + 3.142 * float(sign(INDEX%2-1)));
		
		TRANSFORM[3].xyz = vec3(x,y,z);
		
		float scale = mix(min_clound_size, max_clound_size, 1.0-pow(rand_from_seed(alt_seed_3),2));
		
		TRANSFORM[0].x *= scale;
		TRANSFORM[1].y *= scale;
		TRANSFORM[2].z *= scale;
	}
}"

[sub_resource type="ShaderMaterial" id=13]
shader = SubResource( 12 )
shader_param/angular_spacing = 0.999
shader_param/outward_amt = 1.476
shader_param/min_clound_size = 0.064
shader_param/max_clound_size = 1.291

[sub_resource type="Shader" id=7]
code = "shader_type spatial;
render_mode unshaded;

uniform sampler2D sky_gradient;

uniform float diameter = 100;
uniform float band_size = 0.1;
uniform float interpolation_val = 0.0;

float dist_from_sun(vec3 position){
	float radius = diameter*0.5;
	float dist = mix(interpolation_val-band_size*0.5, interpolation_val+band_size/2.0,1.0+position.z/radius);
	dist = clamp(dist, 0.0, 1.0);
	return dist;
}

void fragment(){
	vec4 world_frag_pos = CAMERA_MATRIX * vec4(VERTEX,1.0);
	
	float dist = dist_from_sun(world_frag_pos.xyz);
	
	vec3 sampled_color = texture(sky_gradient,vec2(dist,0)).rgb;
	vec3 world_normal = NORMAL * mat3(INV_CAMERA_MATRIX);
	
	ALBEDO = sampled_color;
	
	if (world_normal.y < 0.0){
		ALBEDO = sampled_color - vec3(0.04);
	}
}"

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0, 0.14, 0.28, 0.4, 0.49, 0.62, 0.75, 1 )
colors = PoolColorArray( 0.670588, 0.721569, 0.741176, 1, 0.670588, 0.721569, 0.741176, 1, 0.972549, 0.901961, 0.619608, 1, 0.945098, 0.819608, 0.568627, 1, 0.741176, 0.235294, 0.192157, 1, 0.439216, 0.301961, 0.407843, 1, 0.227451, 0.258824, 0.431373, 1, 0.027451, 0.0431373, 0.196078, 1 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )

[sub_resource type="ShaderMaterial" id=10]
render_priority = -128
shader = SubResource( 7 )
shader_param/diameter = 100.0
shader_param/band_size = 0.0
shader_param/interpolation_val = 0.322
shader_param/sky_gradient = SubResource( 9 )

[sub_resource type="SphereMesh" id=11]
material = SubResource( 10 )

[sub_resource type="SpatialMaterial" id=14]
render_priority = -128
albedo_color = Color( 1, 1, 1, 0 )
albedo_texture = ExtResource( 7 )
metallic_specular = 0.0

[sub_resource type="SpatialMaterial" id=15]
albedo_texture = ExtResource( 8 )

[sub_resource type="SpatialMaterial" id=16]
albedo_texture = ExtResource( 8 )

[sub_resource type="CapsuleShape" id=27]
radius = 0.687098
height = 0.002

[node name="world" type="Spatial"]
script = ExtResource( 2 )

[node name="boat" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.396378, 0 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 4 )

[node name="Mesh" type="Spatial" parent="boat"]

[node name="boatmesh" type="MeshInstance" parent="boat/Mesh"]
transform = Transform( -4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91068e-15, 0, 0, 0 )
mesh = ExtResource( 1 )
skeleton = NodePath("../../../TilesRendered/centro")
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="boat"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0158691 )
shape = SubResource( 6 )

[node name="Camroot" type="Spatial" parent="boat"]
script = ExtResource( 3 )

[node name="h" type="Spatial" parent="boat/Camroot"]

[node name="v" type="Spatial" parent="boat/Camroot/h"]

[node name="Camera" type="ClippedCamera" parent="boat/Camroot/h/v"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, -2.671 )
current = true
process_mode = 1

[node name="TextureRect" type="TextureRect" parent="boat/Camroot/h/v/Camera"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true

[node name="ColorRect" type="ColorRect" parent="boat/Camroot/h/v/Camera"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0823529, 0.509804, 0.741176, 0.4 )

[node name="waterFog" type="MeshInstance" parent="boat/Camroot/h/v/Camera"]
transform = Transform( 1, 0, -8.63309e-10, 0, 1, 0, 8.63309e-10, 0, 1, 0, 0, 0 )
mesh = SubResource( 26 )
material/0 = null

[node name="renderFog" type="MeshInstance" parent="boat/Camroot/h/v/Camera"]
transform = Transform( 1, 0, -8.63309e-10, 0, 1, 0, 8.63309e-10, 0, 1, 0, 0, 0 )
mesh = SubResource( 21 )
material/0 = null

[node name="UI" type="Control" parent="boat/Camroot/h/v/Camera"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 14 )

[node name="MargemPopup" type="MarginContainer" parent="boat/Camroot/h/v/Camera/UI"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 200, 200 )

[node name="TPop" type="TextureRect" parent="boat/Camroot/h/v/Camera/UI/MargemPopup"]
margin_right = 400.0
margin_bottom = 400.0
rect_min_size = Vector2( 400, 400 )
texture = ExtResource( 12 )
expand = true

[node name="TPop2" type="TextureRect" parent="boat/Camroot/h/v/Camera/UI/MargemPopup"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 400.0
margin_bottom = 400.0
rect_min_size = Vector2( 400, 400 )
texture = ExtResource( 13 )
expand = true

[node name="FecharTop" type="Button" parent="boat/Camroot/h/v/Camera/UI/MargemPopup"]
margin_left = 384.0
margin_right = 400.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 52, 25 )
size_flags_horizontal = 8
size_flags_vertical = 2
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.494118, 0.188235, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 28 )
custom_styles/hover = SubResource( 31 )
custom_styles/pressed = SubResource( 32 )
custom_styles/focus = SubResource( 33 )
custom_styles/normal = SubResource( 30 )
text = "X"

[node name="FecharTop2" type="Button" parent="boat/Camroot/h/v/Camera/UI/MargemPopup"]
margin_left = 311.0
margin_right = 400.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 52, 25 )
size_flags_horizontal = 8
size_flags_vertical = 2
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.494118, 0.188235, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 28 )
custom_styles/hover = SubResource( 31 )
custom_styles/pressed = SubResource( 32 )
custom_styles/focus = SubResource( 33 )
custom_styles/normal = SubResource( 30 )
text = "Fechar"

[node name="ComecarButton" type="Button" parent="boat/Camroot/h/v/Camera/UI/MargemPopup"]
margin_left = 281.0
margin_right = 400.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 52, 25 )
size_flags_horizontal = 8
size_flags_vertical = 2
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.494118, 0.188235, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 28 )
custom_styles/hover = SubResource( 34 )
custom_styles/pressed = SubResource( 35 )
custom_styles/focus = SubResource( 36 )
custom_styles/normal = SubResource( 37 )
text = "Começar"

[node name="Timer" type="Timer" parent="boat/Camroot/h/v/Camera/UI"]
wait_time = 3.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="boat/Camroot/h/v/Camera/UI"]
anims/RESET = SubResource( 38 )
anims/show = SubResource( 39 )

[node name="mouse_control_stay_delay" type="Timer" parent="boat/Camroot"]
one_shot = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 5 )

[node name="TilesRendered" type="Node" parent="."]

[node name="centro" type="MeshInstance" parent="TilesRendered"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.513, 0, -2.048 )
mesh = SubResource( 3 )
skeleton = NodePath("../..")
material/0 = null

[node name="cima" type="MeshInstance" parent="TilesRendered"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 90, 0, 0 )
mesh = SubResource( 3 )
skeleton = NodePath("../centro")
material/0 = null

[node name="baixo" type="MeshInstance" parent="TilesRendered"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -90, 0, 0 )
mesh = SubResource( 3 )
skeleton = NodePath("../centro")
material/0 = null

[node name="direita" type="MeshInstance" parent="TilesRendered"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 90 )
mesh = SubResource( 3 )
skeleton = NodePath("../centro")
material/0 = null

[node name="esquerda" type="MeshInstance" parent="TilesRendered"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -90 )
mesh = SubResource( 3 )
skeleton = NodePath("../centro")
material/0 = null

[node name="cd" type="MeshInstance" parent="TilesRendered"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 90.1594, -0.730841, 89.5337 )
mesh = SubResource( 3 )
skeleton = NodePath("../centro")
material/0 = null

[node name="ce" type="MeshInstance" parent="TilesRendered"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 90, 0, -90 )
mesh = SubResource( 3 )
skeleton = NodePath("../centro")
material/0 = null

[node name="bd" type="MeshInstance" parent="TilesRendered"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -90, 0, 90 )
mesh = SubResource( 3 )
skeleton = NodePath("../centro")
material/0 = null

[node name="be" type="MeshInstance" parent="TilesRendered"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -90, 0, -90 )
mesh = SubResource( 3 )
skeleton = NodePath("../centro")
material/0 = null

[node name="TimerRender" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Clounds" type="Particles" parent="."]
transform = Transform( 8.42048, 0, 5.39403, 0, 10, 0, -5.39403, 0, 8.42048, 0, 50.7686, 0 )
amount = 169
visibility_aabb = AABB( -10.4682, -2.26104, -8.15304, 20.9316, 4.52208, 16.7514 )
process_material = SubResource( 13 )
draw_pass_1 = SubResource( 11 )
script = ExtResource( 5 )

[node name="Island" type="Spatial" parent="."]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, -4.24239, 37.0519 )

[node name="islandBody" type="Area" parent="Island"]

[node name="CollisionShape" type="CollisionShape" parent="Island/islandBody"]
process_priority = -241
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.427144, 0 )
shape = ExtResource( 11 )

[node name="sand" type="MeshInstance" parent="Island/islandBody"]
mesh = ExtResource( 6 )
skeleton = NodePath("../..")
material/0 = SubResource( 14 )

[node name="coqueiro_lendario" type="MeshInstance" parent="Island/islandBody"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0.503142, 0 )
mesh = ExtResource( 9 )
skeleton = NodePath("../..")
material/0 = SubResource( 15 )
material/1 = SubResource( 16 )

[node name="StaticBody" type="StaticBody" parent="Island"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Island/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.413855, 0 )
shape = SubResource( 27 )

[node name="Menus" type="Node2D" parent="."]

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[connection signal="button_down" from="boat/Camroot/h/v/Camera/UI/MargemPopup/FecharTop" to="." method="_on_FecharTop_button_down"]
[connection signal="button_down" from="boat/Camroot/h/v/Camera/UI/MargemPopup/FecharTop2" to="." method="_on_FecharTop_button_down"]
[connection signal="pressed" from="boat/Camroot/h/v/Camera/UI/MargemPopup/ComecarButton" to="." method="_on_ComecarButton_pressed"]
[connection signal="timeout" from="boat/Camroot/h/v/Camera/UI/Timer" to="boat/Camroot/h/v/Camera/UI" method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerRender" to="." method="_on_TimerRender_timeout"]
[connection signal="body_entered" from="Island/islandBody" to="." method="_on_islandBody_body_entered"]
